<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.SignInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">
        <ImageView
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/ic_histo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name" />
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="22"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/ic_quiz"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name" />
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="30dp"
            android:paddingStart="40dp"
            android:paddingLeft="40dp"
            android:paddingEnd="40dp"
            android:paddingRight="40dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="66"
            android:orientation="vertical"
            android:weightSum="100"
            android:alpha="0.8"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/ic_ball">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_marginTop="20dp"
                app:startIconDrawable="@drawable/ic_arroba"
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:textColorHint="@color/grey"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kabouter"
                    android:textSize="23sp"
                    android:autofillHints=""
                    android:textColor="@color/black"
                    android:background="@drawable/text_edit_style"
                    android:hint="@string/textBoxHint"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/senha"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                android:hint="@string/senha"
                app:startIconDrawable="@drawable/ic_password"
                android:textColorHint="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:autofillHints=""
                    android:fontFamily="@font/kabouter"
                    android:textSize="23sp"
                    android:background="@drawable/text_edit_style"
                    android:hint="@string/textBoxHint"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/entrar"
                android:layout_width="120dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/kabouter"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/button_dark_style"
                android:text="@string/entrar">
            </Button>
            <TextView
                android:id="@+id/esqueceuSenha"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:fontFamily="@font/kabouter"
                android:textSize="21sp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                style="@style/Hyperlink"
                android:textColor="@color/black"
                android:text="@string/esqueciSenha">
            </TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kabouter"
                    android:textSize="21sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/novoAqui">
                </TextView>
                <TextView
                    android:id="@+id/cadastrar"
                    android:layout_marginStart="2.5dp"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/kabouter"
                    android:textSize="21sp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    style="@style/Hyperlink"
                    android:text="@string/cadastre">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>