<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_vertical|center_horizontal"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_width="match_parent"
    app:cardBackgroundColor="@color/darkPurple"
    app:cardCornerRadius="8dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/fullContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pinkchicken"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/endGame"/>
            <TextView
                android:id="@+id/ganhadorPartida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pinkchicken"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/vc"/>
        </LinearLayout>
        <View
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="@color/white"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">
            <TextView
                android:id="@+id/respAdv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pinkchicken"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/pontuacao"
                android:layout_alignParentStart="true"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignEnd="@+id/respAdv"
                android:layout_alignParentEnd="true">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardMinhaPontuacao"
                    android:textAlignment="viewEnd"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:contentPaddingBottom="5dp"
                    app:contentPaddingTop="5dp"
                    app:contentPaddingLeft="20dp"
                    app:contentPaddingRight="20dp"
                    app:cardBackgroundColor="@color/green">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pinkchicken"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:text="@string/pontFinalVc"/>
                        <TextView
                            android:id="@+id/minhaPontuacao"
                            android:layout_marginStart="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pinkchicken"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:text="@string/pontuacaoInicial"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardPontuacaoOponente"
                    android:layout_marginTop="10dp"
                    android:textAlignment="viewEnd"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:contentPaddingBottom="5dp"
                    app:contentPaddingTop="5dp"
                    app:contentPaddingLeft="20dp"
                    app:contentPaddingRight="20dp"
                    app:cardBackgroundColor="@color/red">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pinkchicken"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:text="@string/pontFinalOponente"/>
                        <TextView
                            android:id="@+id/pontOponente"
                            android:layout_marginStart="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pinkchicken"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:text="@string/pontuacaoInicial"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </RelativeLayout>
        <Button
            style="?android:attr/buttonBarStyle"
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/pinkchicken"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/button_light_style"
            android:text="@string/menuInicial"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>