<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_vertical|center_horizontal"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_width="match_parent"
    app:cardBackgroundColor="@color/darkPurple"
    app:cardCornerRadius="8dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kabouter"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/adivinharLamina"/>
        <View
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="@color/white"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/lamina"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_dna"
            android:layout_width="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/informeLamina"
            android:textColorHint="@color/grey"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="@font/kabouter"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:background="@drawable/text_edit_style"
                android:hint="@string/textBoxHint"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_horizontal|center_vertical">
            <Button
                style="?android:attr/buttonBarStyle"
                android:id="@+id/voltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/kabouter"
                android:layout_gravity="end"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/button_light_style"
                android:text="@string/voltar">
            </Button>
            <Button
                style="?android:attr/buttonBarStyle"
                android:id="@+id/enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/kabouter"
                android:layout_gravity="end"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/button_light_style"
                android:text="@string/enviar">
            </Button>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>