<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".activities.MyAccountActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/fullContent"
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/panelPurple"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/panelPurple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tabIconTint="@color/white"
                app:tabIndicatorColor="@color/darkPurple"
                app:tabSelectedTextColor="@color/darkerPurple"
                app:tabTextAppearance="@style/MineCustomTabText"
                app:tabTextColor="@color/white">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:icon="@drawable/ic_id_card"
                    android:text="@string/perfil" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabAmigos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:icon="@drawable/ic_user_friends"
                    android:text="@string/amigos" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabDesempenho"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:icon="@drawable/ic_chart_pie"
                    android:text="@string/desempenho" />

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="fill_parent">
            </androidx.viewpager2.widget.ViewPager2>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>